--- a/researchBiasCorrection.ipynb
+++ b/researchBiasCorrection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1S9Il690eEvtaVxgYnJFzpImRLpw5L_J-",
-      "authorship_tag": "ABX9TyP6m0j/QtHS+m9sjVGGdmXe",
+      "authorship_tag": "ABX9TyNTCC4qrpmnKjknq/OCSg7y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,61 +94,135 @@
     {
       "cell_type": "code",
       "source": [
-        "def perform_bias_correction ():\n",
-        "  # Open and calibrate past_gcm dataset.\n",
-        "  past_gcm = xr.open_dataset(\"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/past_gcm/HADGEM_GCM_past.nc\",decode_times=False)\n",
-        "  past_gcm = xr.decode_cf(past_gcm)\n",
-        "  past_gcm = fix_calendar(past_gcm)\n",
+        "def perform_bias_correction():\n",
+        "    # Open and calibrate past_gcm dataset.\n",
+        "    past_gcm = xr.open_dataset(\n",
+        "        \"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/past_gcm/HADGEM_GCM_past.nc\",\n",
+        "        decode_times=False,\n",
+        "    )\n",
+        "    past_gcm = xr.decode_cf(past_gcm)\n",
+        "    past_gcm = fix_calendar(past_gcm)\n",
         "\n",
-        "  # Open and calibrate future_gcm dataset.\n",
-        "  future_gcm = xr.open_dataset(\"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/future_gcm/ssp585/HADGEM_GCM_future.nc\", decode_times=False)\n",
-        "  future_gcm = xr.decode_cf(future_gcm)\n",
-        "  future_gcm = fix_calendar(future_gcm)\n",
+        "    # Open and calibrate future_gcm dataset.\n",
+        "    future_gcm = xr.open_dataset(\n",
+        "        \"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/future_gcm/ssp585/HADGEM_GCM_future.nc\",\n",
+        "        decode_times=False,\n",
+        "    )\n",
+        "    future_gcm = xr.decode_cf(future_gcm)\n",
+        "    future_gcm = fix_calendar(future_gcm)\n",
         "\n",
-        "  # Open era5 dataset.\n",
-        "  era5 = xr.open_dataset(\"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/era5/ERA5_1980.nc\")\n",
-        "  for i in range(34):\n",
-        "    era5CurrYear = xr.open_dataset(\"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/era5/ERA5_\" + str(1981 + i) + \"_xarray.nc\")\n",
-        "    era5 = xr.concat([era5, era5CurrYear], dim='time')\n",
+        "    # Open era5 dataset.\n",
+        "    era5 = xr.open_dataset(\n",
+        "        \"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/era5/ERA5_1980.nc\"\n",
+        "    )\n",
+        "    for i in range(34):\n",
+        "        era5CurrYear = xr.open_dataset(\n",
+        "            \"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/era5/ERA5_\"\n",
+        "            + str(1981 + i)\n",
+        "            + \"_xarray.nc\"\n",
+        "        )\n",
+        "        era5 = xr.concat([era5, era5CurrYear], dim=\"time\")\n",
         "\n",
-        "  # Adjust past_gcm and future_gcm datasets to match era5.\n",
-        "  past_gcm_2015_val = future_gcm.sel(time=slice('2015-01-01', '2015-01-01'))\n",
-        "  past_gcm = past_gcm.sel(time=slice('1980-01-01', '2014-12-30'))\n",
-        "  future_gcm = xr.concat([past_gcm_2015_val, future_gcm], dim='time')\n",
+        "    # Adjust past_gcm and future_gcm datasets to match era5.\n",
+        "    past_gcm_2015_val = future_gcm.sel(time=slice(\"2015-01-01\", \"2015-01-01\"))\n",
+        "    past_gcm = past_gcm.sel(time=slice(\"1980-01-01\", \"2014-12-30\"))\n",
+        "    future_gcm = xr.concat([past_gcm_2015_val, future_gcm], dim=\"time\")\n",
         "\n",
-        "  # 1:1 copy, not a reference, of the future_gcm so it can be modified.\n",
-        "  future_gcm_BC_copy = future_gcm.copy()\n",
+        "    # 1:1 copy, not a reference, of the future_gcm so it can be modified.\n",
+        "    future_gcm_BC_copy = future_gcm.copy()\n",
         "\n",
-        "  # Dictionary to store variables for each month.\n",
-        "  month_variables = {}\n",
+        "    # Dictionary to store variables for each month.\n",
+        "    month_variables = {}\n",
         "\n",
-        "  for i in tqdm(range(1,13)):\n",
+        "    for i in tqdm(range(1, 13)):\n",
         "\n",
-        "    # Variable name for each month.\n",
-        "    variable_name = f\"month_{i}\"\n",
+        "        # Variable name for each month.\n",
+        "        variable_name = f\"month_{i}\"\n",
         "\n",
-        "    # A month of data from the future to be bias corrected.\n",
-        "    future_gcm_BC_copy_month = future_gcm_BC_copy.sel(time=future_gcm_BC_copy['time.month'] == i)\n",
+        "        # A month of data from the future to be bias corrected.\n",
+        "        future_gcm_BC_copy_month = future_gcm_BC_copy.sel(\n",
+        "            time=future_gcm_BC_copy[\"time.month\"] == i\n",
+        "        )\n",
         "\n",
-        "    past_gcm_month = past_gcm.sel(time=past_gcm['time.month'] == i)['tas']\n",
-        "    future_gcm_month = future_gcm.sel(time=future_gcm['time.month'] == i)['tas']\n",
-        "    era5_gcm_month = era5.sel(time=era5['time.month'] == i)['t2m']\n",
+        "        past_gcm_month = past_gcm.sel(time=past_gcm[\"time.month\"] == i)[\"tas\"]\n",
+        "        future_gcm_month = future_gcm.sel(time=future_gcm[\"time.month\"] == i)[\"tas\"]\n",
+        "        era5_gcm_month = era5.sel(time=era5[\"time.month\"] == i)[\"t2m\"]\n",
         "\n",
-        "    # latitude loops\n",
-        "    for lat in range(len(past_gcm.lat)):\n",
+        "        # latitude loops\n",
+        "        for lat in range(len(past_gcm.lat)):\n",
         "\n",
-        "        # Converts the latitude value at index phi into a float in the variable lat_phi\n",
-        "        lat = past_gcm.lat[lat].values\n",
+        "            # Converts the latitude value at index phi into a float in the variable lat_phi\n",
+        "            lat = past_gcm.lat[lat].values\n",
         "\n",
+        "            # longitude loops\n",
+        "            for lon in range(len(gcm_P.lon)):\n",
         "\n",
+        "                # All the temperatures from month i at grid cell lat x lon sorted by temperature\n",
+        "                past_month_temp_grid_cell_sorted = np.sort(past_gcm_month[:, phi, L])\n",
+        "                future_month_temp_grid_cell_sorted = np.sort(future_gcm_month[:, phi, L])\n",
+        "                era5_month_temp_grid_cell_sorted = np.sort(era5_gcm_month[:, phi, L])\n",
         "\n",
+        "                # Creating a copy of future data\n",
+        "                future_gcm_month_cell = future_gcm_month[:, phi, L].values\n",
         "\n",
+        "                # Creates an array from 1/arr length to 1 which will be used for the percentile classification of temperatures\n",
+        "                # ECDF = Emperical Cumulative Distribution Function\n",
+        "                # First paramater (1) is the numerator for the index.\n",
+        "                # TODO understand the ECDF on Youtube Videos\n",
+        "                ecdf_past = np.arange(1, len(past_month_temp_grid_cell_sorted) + 1) / len(\n",
+        "                    past_month_temp_grid_cell_sorted\n",
+        "                )\n",
+        "                ecdf_future = np.arange(1, len(future_month_temp_grid_cell_sorted) + 1) / len(\n",
+        "                    future_month_temp_grid_cell_sorted\n",
+        "                )\n",
+        "                ecdf_era = np.arange(1, len(era5_month_temp_grid_cell_sorted) + 1) / len(\n",
+        "                    era5_month_temp_grid_cell_sorted\n",
+        "                )\n",
         "\n",
-        "# Bias corrected dataset setup\n",
-        "  bias_corrected_filepath = '/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/BC_dataset/HADGEM3_BC.nc'\n",
+        "                # Contains zeros in which we are going to save the Bias corrected values\n",
+        "                empty_future_gcm_month_cell = np.zeros(len(future_gcm_month_cell))\n",
         "\n",
-        "  # Save the dataset to the updated file.\n",
-        "  # futr_PV_corr.to_netcdf(bias_corrected_filepath)\n"
+        "                # Loops through every future PV cell datapoint in the chronological order\n",
+        "                for i in range(len(future_gcm_month_cell)):\n",
+        "                    # Try catch\n",
+        "                    try:\n",
+        "                        # Does the ECDF (three arrows) mapping\n",
+        "                        empty_future_gcm_month_cell[i] = era5_month_temp_grid_cell_sorted[\n",
+        "                            np.where(past_month_temp_grid_cell_sorted <= future_month_temp_grid_cell_sorted[i])[0][-1]\n",
+        "                        ]  ### This is the main ECDF BC function.\n",
+        "                    except IndexError:\n",
+        "                        # If the condition is not fulfilled, it means that we found a value that is smaller than all of the data from the past which means that we need to use the first\n",
+        "                        # value in the sorted past which is the lowest temperature we have seen\n",
+        "                        empty_future_gcm_month_cell[i] = era5_month_temp_grid_cell_sorted[0]\n",
+        "                # Saves all of the datapoints for the latitude and longitude to the future_gcm_BC_copy_month\n",
+        "                future_gcm_BC_copy_month[PV].loc[dict(lat=lat, lon=lon)] = empty_future_gcm_month_cell\n",
+        "\n",
+        "        # Adds 1 month of the BC data to the variables dictionary\n",
+        "        month_variables[variable_name] = future_gcm_BC_copy_month\n",
+        "\n",
+        "    # merge the datasets:\n",
+        "    futr_PV_corr = xr.merge(\n",
+        "        [\n",
+        "            variables[\"month_1\"],\n",
+        "            variables[\"month_2\"],\n",
+        "            variables[\"month_3\"],\n",
+        "            variables[\"month_4\"],\n",
+        "            variables[\"month_5\"],\n",
+        "            variables[\"month_6\"],\n",
+        "            variables[\"month_7\"],\n",
+        "            variables[\"month_8\"],\n",
+        "            variables[\"month_9\"],\n",
+        "            variables[\"month_10\"],\n",
+        "            variables[\"month_11\"],\n",
+        "            variables[\"month_12\"],\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "    # save the dataset:\n",
+        "    futr_PV_corr.to_netcdf(\n",
+        "        \"/content/drive/MyDrive/Sathkrith_Segu_LumiereSummerProject/BC_dataset/HADGEM3_BC.nc\"\n",
+        "    )\n",
+        "    return"
       ],
       "metadata": {
         "id": "KoYwzF2bUkiu"
